fixed borders overlapping

--- a/src/app/components/Calendar.module.css
+++ b/src/app/components/Calendar.module.css
@@ -1,5 +1,5 @@
 .reactCalendar {
-  border: 1px solid #600086;
+  border: 3px solid #600086;
   width: 100%;
   border-radius: 20px;
   box-sizing: border-box !important;
@@ -11,9 +11,9 @@
 
 .reactCalendar__tile {
   background-color: #E9E4F2;
-  border: 2px solid #600086 !important;
+  border: 3px solid #600086 !important;
   box-sizing: border-box !important;
-  margin: 0px;
+  margin: -1.5px !important;
   padding: 20px;
   padding-top: 50px;
   padding-bottom: 50px;
